# cpptemplate

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt
